--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "antd": "^6.2.0",
     "crypto-js": "^4.2.0",
     "firebase": "^12.8.0",
+    "moment": "^2.30.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
     "react-redux": "^9.2.0",
